--- a/core/locale/en/lang_errors.xml
+++ b/core/locale/en/lang_errors.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_errors.xml,v 1.140 2012/01/18 02:03:10 mhaidar Exp $
+* $Id: lang_errors.xml,v 1.141 2012/02/20 23:14:31 cupreti Exp $
 *
 */
 
@@ -790,9 +790,9 @@
 
 	<error code="SYS0020">The uploaded file "%1$s" exceeded the set limit of %2$s</error><!-- core/lib/html_form/html_form.inc:562: -->
 
-	<error code="SYS0021">The uploaded file "%1$s" exceeded the MAX_FILE_SIZE directive in form (%2$s)</error><!-- core/lib/html_form/html_form.inc:519: -->
+	<error code="SYS0021">The uploaded file "%1$s" exceeded the MAX_FILE_SIZE directive in form (%2$s). Your current %3$s settings allows you to upload files no larger than %4$sMB</error><!-- core/lib/html_form/html_form.inc:519: -->
 
-	<error code="SYS0022">The uploaded file "%1$s" exceeded the size specified by the 'upload_max_filesize' directive in php.ini (%2$s)</error><!-- core/lib/html_form/html_form.inc:514: -->
+	<error code="SYS0022">The uploaded file "%1$s" exceeded the size specified by the 'upload_max_filesize' directive in php.ini (%2$s). Your current %3$s settings allows you to upload files no larger than %4$sMB</error><!-- core/lib/html_form/html_form.inc:514: -->
 
 	<error code="SYS0023">The uploaded file "%s" was only partially uploaded.</error><!-- core/lib/html_form/html_form.inc:524: -->
 
