Commit for #5578 Feature : Cacheable headers for logged in users. Changes to files to add new options for 'Send Cacheable Headers for' on the send_cacheable_header screen

--- a/core/assets/system/cache_manager/locale/en/lang_screen_send_cacheable_header.xml
+++ b/core/assets/system/cache_manager/locale/en/lang_screen_send_cacheable_header.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_send_cacheable_header.xml,v 1.2 2011/11/02 22:43:37 cupreti Exp $
+* $Id: lang_screen_send_cacheable_header.xml,v 1.3 2012/02/21 02:56:06 akarelia Exp $
 *
 */
 -->
@@ -33,7 +33,11 @@
 		<field attribute="cache_control_https">
 			<display_name>Https Cache Control Level</display_name>
 			<note />
-		</field>		
+		</field>
+		<field attribute="send_headers_for">
+			<display_name>Send Cacheable Headers for</display_name>
+			<note />
+		</field>
 	</section>
 	<section name="Root URLs to Send Cacheable Headers">
 		<field>
