--- a/core/assets/system/cache_manager/locale/en/lang_screen_send_cacheable_header.xml
+++ b/core/assets/system/cache_manager/locale/en/lang_screen_send_cacheable_header.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_send_cacheable_header.xml,v 1.3 2012/02/21 02:56:06 akarelia Exp $
+* $Id: lang_screen_send_cacheable_header.xml,v 1.4 2012/02/28 02:06:50 ewang Exp $
 *
 */
 -->
@@ -32,10 +32,6 @@
 		</field>
 		<field attribute="cache_control_https">
 			<display_name>Https Cache Control Level</display_name>
-			<note />
-		</field>
-		<field attribute="send_headers_for">
-			<display_name>Send Cacheable Headers for</display_name>
 			<note />
 		</field>
 	</section>
